# DRVI_reproducibility

./: .gitignore  README.md  pyproject.toml  requirements.txt
drvi_notebooks/analysis/: ablation_study_immune.py  ablation_study_immune_all_genes.py  ablation_study_on_latent_dim_all_data.py  ablation_study_zebrafish.py  developmental_pancreas_analysis-v2-new-interface.py  developmental_pancreas_analysis.py  hlca_analysis-v2.py  hlca_analysis-v3-new-interface.py  hlca_analysis.py  immune_ablation_study.py  immune_ablation_study_all_genes.py  immune_analysis-v2.py  immune_analysis-v3-new-interface.py  immune_analysis.py  immune_dataset_analysis.py  latent_dim_effect_for_all_data.py  norman_pert_analysis.py  zebrafish_ablation_study.py
drvi_notebooks/baseline/: baseline_runs.sh  linear_baselines_runvis.py
drvi_notebooks/data/atac_modality/: atac_data_preparation.py  neurips_21_multimodal_data_preparation.py
drvi_notebooks/data/developmental/: cellrank_pancreas_data_preparation.py  scvelo_any_data_preparation.py  zebrafish_2023.py
drvi_notebooks/data/hlca/: data_preparation.py
drvi_notebooks/data/immune/: data_preparation.py  data_preparation_runvis.py  (+1 more)
drvi_notebooks/evaluation/: disentanglement.py  disentanglement_result_aggregation.ipynb  disentanglement_result_aggregation.py  integration.ipynb  integration.py  integration_result_aggregation.ipynb  integration_result_aggregation.py  runs.sh
drvi_notebooks/general/: drvi_runvis.py  general_interpretability.py  runs.sh
drvi_notebooks/utils/: latent.py  method_info.py  misc.py  run_info.py  transformations.py
(+9 files in other folders)
