[tool.poetry]
name = "drvi_notebooks"
version = "1.0.0"
description = "Reproducibility Notebooks and Utils for DRVI"
authors = ["Amir Ali moinfar <moinfar.amirali@gmail.com>"]
readme = "README.md"
packages = [{include = "drvi_notebooks"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pyarrow = ">=10.0.0"
wandb = ">=0.15.12"
tensorboard = ">=2.15.0"
leidenalg = ">=0.10.1"
rapids_singlecell = ">=0.9.3,<1.0.0"
xgboost = ">=2.0.0"
gprofiler-official = ">=1.0.0"
scib-metrics = ">=0.5.0"

[tool.poetry.group.dev.dependencies]
black = "23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
